removed font face rule and font and added semibold to info container. Necessary to fix frontendmentof screenshot issue

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@
     line-height: var(--line-1);
     &.info-container__item--cyan {
       color: var(--cyan-400);
+      font-weight: 600;
     }
     &.info-container__item--blue {
       color: var(--blue-500);
