--- a/styles.css
+++ b/styles.css
@@ -49,9 +49,8 @@
   }
 
   .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-content: center;
     block-size: 100%;
   }
 
